--- a/quiz_play.html
+++ b/quiz_play.html
@@ -80,43 +80,45 @@
 	    </div>		  
 	  <main class="mdl-layout__content">
 	    <div class="page-content mdl-container">	
-		<div class="mdl-container_text">
-			<div id="question_header">
-            <div id="question_nb">
-                Question <span id="question_nb_value"></span>
-            </div>
-            <div id="question_timer">
-                Temps restant : <span id="question_timer_value"></span>
-            </div>
-        </div>
-        <div id="question_body">
-            <div id="question_text"></div>
-            <div id="answers"></div>
-        </div>
-        <div id="question_comment">
-            <div id="comment_1"></div>
-            <div id="comment_2"></div>
-        </div>
-        <div id="question_footer"> 
-            <div id="question_score">
-                Score : <span id="question_score_value"></span>
-            </div>
-            <div id="question_next_replay">
-            </div>
-        </div>
-		</div>
-
-
+			<div class="mdl-container_text">
+				<div id="question_header">
+	            <div id="question_nb">
+	                Question <span id="question_nb_value"></span>
+	            </div>
+	            <div id="question_timer">
+	                Temps restant : <span id="question_timer_value"></span>
+	            </div>
+	        </div>
+	        <div id="question_body">
+	            <div id="question_text"></div>
+	            <div id="answers"></div>
+	        </div>
+	        <div id="question_comment">
+	            <div id="comment_1"></div>
+	            <div id="comment_2"></div>
+	        </div>
+	        <div id="question_footer"> 
+	            <div id="question_score">
+	                Score : <span id="question_score_value"></span>
+	            </div>
+	            <div id="question_next_replay">
+	            </div>
+	        </div>
+			</div>
 	    </div>
-		    
+	    
+	    <div class="page-content mdl-container">	
+			<div class="mdl-grid container">	
+	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
+				  <div class="mdl-mini-footer__left-section">
+				    <ul class="mdl-mini-footer__link-list">
+				      <li><a href="#">Fongwama - 2017</a></li>
+				    </ul>
+				  </div>
+				</footer>	
+			</div>
+	    </div>  		    
 	  </main>
-		  	<footer class="mdl-mini-footer mdl-layout--large-screen-only">
-		  <div class="mdl-mini-footer__left-section">
-		    <ul class="mdl-mini-footer__link-list">
-		      <li><a href="#">Fongwama - 2017</a></li>
-		    </ul>
-		  </div>
-		</footer>
 	</div>
 		
     <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
