--- a/se_soigner.html
+++ b/se_soigner.html
@@ -143,16 +143,20 @@
 			</div>
 
 	    </div>
-    
+
+	    <div class="page-content mdl-container">	
+			<div class="mdl-grid container">	
+	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
+				  <div class="mdl-mini-footer__left-section">
+				    <ul class="mdl-mini-footer__link-list">
+				      <li><a href="#">Fongwama - 2017</a></li>
+				    </ul>
+				  </div>
+				</footer>	
+			</div>
+	    </div>    
 	  </main>
 
-		<footer class="mdl-mini-footer mdl-layout--large-screen-only">
-		  <div class="mdl-mini-footer__left-section">
-		    <ul class="mdl-mini-footer__link-list">
-		      <li><a href="#">Fongwama - 2017</a></li>
-		    </ul>
-		  </div>
-		</footer>	
 	</div>
 		
 
