--- a/comprendre.html
+++ b/comprendre.html
@@ -145,16 +145,20 @@
 						            <p>Au Congo, le Programme National de Lutte contre le Paludisme (PNLP) relève que le paludisme est le premier motif de consultation dans les centres de santé. En 2015, près de 200 000 congolais ont été touchés par le paludisme, dont 2500 femmes enceintes.</p>
 						</div>
 					</div>
-						<footer class="mdl-mini-footer mdl-layout--large-screen-only">
-		  <div class="mdl-mini-footer__left-section">
-		    <ul class="mdl-mini-footer__link-list">
-		      <li><a href="#">Fongwama - 2017</a></li>
-		    </ul>
-		  </div>
-		</footer>
 			</div>
 
-	    </div>	    
+	    </div>
+	        	    <div class="page-content mdl-container">	
+			<div class="mdl-grid container">	
+	  			<footer class="mdl-mini-footer mdl-layout--large-screen-only">
+				  <div class="mdl-mini-footer__left-section">
+				    <ul class="mdl-mini-footer__link-list">
+				      <li><a href="#">Fongwama - 2017</a></li>
+				    </ul>
+				  </div>
+				</footer>	
+			</div>
+	    </div>  
 	  </main>
 	</div>
 		
