logo layout fixed

--- a/qui.html
+++ b/qui.html
@@ -92,37 +92,39 @@
 
 
 			<h5>Crédits images</h5>
-			
-<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-  <tbody>
-    <tr>
-      <td class="mdl-data-table__cell--non-numeric">
-<a href="http://flyecair.com/" class="">
+
+			<div class="mdl-grid container">
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+				  <a href="http://flyecair.com/" class="">
 			        <img src="img/logo_fondation_ecair.jpg" alt="logo Fondation ECAir" class="center-block img-responsive" />
 			      </a>
-      </td>
-      <td><a href="http://skepsos.fr/" class="">
+			  </div>
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+      			  <a href="http://skepsos.fr/" class="">
 			        <img src="img/logo_skepsos.jpg" alt="logo Skepsos" class="center-block img-responsive" />
-			      </a></td>
-    </tr>
-    <tr>
-      <td class="mdl-data-table__cell--non-numeric"><a href="http://azur-congo.com/" class="">
+			      </a>		  	
+			  </div>
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+      			  <a href="http://azur-congo.com/" class="">
 			        <img src="img/logo_azur.jpg" alt="logo Azur" class="center-block img-responsive" />
-			      </a></td>
-      <td><a href="http://fcrm-congo.com/" class="">
+			      </a>		  	
+			  </div>
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+      			  <a href="http://fcrm-congo.com/" class="">
 			        <img src="img/logo_fcrm.jpg" alt="logo Azur" class="center-block img-responsive" />
-			      </a></td>
-    </tr>
-    <tr>
-      <td class="mdl-data-table__cell--non-numeric"><a href="#" class="">
+			      </a>	  	
+			  </div>	
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+      			  <a href="#" class="">
 			        <img src="img/logo_pnlp.jpg" alt="logo PNLP" class="center-block img-responsive" />
-			      </a></td>
-      <td><a href="http://congotelecom.cg/" class="">
+			      </a>
+			  </div>
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+      			  <a href="http://congotelecom.cg/" class="">
 			        <img src="img/logo_congo_telecom.jpg" alt="logo PNLP" class="center-block img-responsive" />
-			      </a> </td>
-    </tr>
-  </tbody>
-</table>
+			      </a>	  	
+			  </div>				    
+			</div>
 
 
             <p>Toutes les images utilisées dans cette application sont des images sous licence Creative Commons ou du domaine public.</p>
