--- a/qui.html
+++ b/qui.html
@@ -80,10 +80,16 @@
 						<div class="mdl-container_text">	
 						    <p>EduPalu est une application d'information et d'éducation sur le paludisme au Congo.</p>
             
-            <p>Développement : Fongwama, la plateforme congolaise de développement libre.
-            <figure class="figureImg">
-                <img src="img/logo_fongwama.jpg" alt="logo Fongwama" class="center-block img-responsive" /><br />
-            </figure>
+            <p>Développement : <b>Fongwama</b>, la communauté congolaise de développement libre.</p>
+			<div class="mdl-grid container">
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--4-col-phone mdl-cell--2-col-tablet center">
+				  <a href="#" class="">
+			        <img src="img/logo_fongwama.jpg" alt="logo Fongwama" class="center-block img-responsive" />
+			      </a>
+			  </div>				    
+			</div> 
+
+			<p>
             Prince Youlou, Delphin Bondongo, Aristide Ndielé, Trésor Ngassaki, Borel Badila, Steve Ndende, Pierre Poulain, Ricken Bazolo.
             </p>          
 
@@ -91,32 +97,32 @@
 			<h5>Crédits images</h5>
 
 			<div class="mdl-grid container">
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+			  <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
 				  <a href="http://flyecair.com/" class="">
 			        <img src="img/logo_fondation_ecair.jpg" alt="logo Fondation ECAir" class="center-block img-responsive" />
 			      </a>
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+			  <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
       			  <a href="http://skepsos.fr/" class="">
 			        <img src="img/logo_skepsos.jpg" alt="logo Skepsos" class="center-block img-responsive" />
 			      </a>		  	
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+			  <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
       			  <a href="http://azur-congo.com/" class="">
 			        <img src="img/logo_azur.jpg" alt="logo Azur" class="center-block img-responsive" />
 			      </a>		  	
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+			  <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
       			  <a href="http://fcrm-congo.com/" class="">
 			        <img src="img/logo_fcrm.jpg" alt="logo Azur" class="center-block img-responsive" />
 			      </a>	  	
 			  </div>	
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+			  <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
       			  <a href="#" class="">
 			        <img src="img/logo_pnlp.jpg" alt="logo PNLP" class="center-block img-responsive" />
 			      </a>
 			  </div>
-			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
+			  <div class="mdl-cell mdl-cell--4-col-desktop mdl-cell--2-col-phone mdl-cell--2-col-tablet center">
       			  <a href="http://congotelecom.cg/" class="">
 			        <img src="img/logo_congo_telecom.jpg" alt="logo PNLP" class="center-block img-responsive" />
 			      </a>	  	
