drawer's logo changed

--- a/quiz_play.html
+++ b/quiz_play.html
@@ -52,7 +52,7 @@
 	    </div>
 	  </header>
 	  <div class="mdl-layout__drawer">
-	    <span class="mdl-layout-title"><img src="img/logo.png" alt="EduPalu logo"></span>
+	    <span class="mdl-layout-title"><img src="img/logo2.png" alt="EduPalu logo"></span>
 	    <nav class="mdl-navigation">
 	      <a class="mdl-navigation__link" href="comprendre.html"><i class="material-icons">description</i>Comprendre</a>
 	      <a class="mdl-navigation__link" href="se_proteger.html"><i class="material-icons">warning</i>Se protéger</a>
