search icon class implemented

--- a/quiz_play.html
+++ b/quiz_play.html
@@ -69,7 +69,7 @@
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
-				    <i class="material-icons">search</i>
+				    <i class="material-icons blue_color">search</i>
 				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
 			  </div>
