menu on large screen fixed

--- a/diagnostiquer.html
+++ b/diagnostiquer.html
@@ -39,11 +39,11 @@
 			</div>	
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
-	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
-	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
+	        <a class="mdl-navigation__link" href="adresse.html">Rechercher une pharmacie/CSi</a>
+	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>	        
 	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
-	        <a class="mdl-navigation__link" href="">Comment ?</a>
-	        <a class="mdl-navigation__link" href="">A propos</a>
+	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
+	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
 	      </nav>
 	    </div>
 	  </header>
@@ -65,7 +65,7 @@
 			<div class="mdl-grid bg_search">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
-				    <i class="material-icons">search</i>
+				    <i class="material-icons blue_color">search</i>
 				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
 			  </div>
