--- a/quiz_play.html
+++ b/quiz_play.html
@@ -43,11 +43,11 @@
 			</div>	
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
-	        <a class="mdl-navigation__link" href="">Trouver une pharmacie</a>
-	        <a class="mdl-navigation__link" href="">Trouver un CSI</a>
+	        <a class="mdl-navigation__link" href="adresse.html">Rechercher une pharmacie/CSi</a>
+	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>	        
 	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
-	        <a class="mdl-navigation__link" href="">Comment ?</a>
-	        <a class="mdl-navigation__link" href="">A propos</a>
+	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
+	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
 	      </nav>
 	    </div>
 	  </header>
