--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	      <!-- Navigation. We hide it in small screens. -->
 			<div class="mdl-layout--small-screen-only">
 			  <label class="mdl-button mdl-js-button mdl-button--icon" for="waterfall-exp">
-          	  	<i class="material-icons">location_on</i>
+          	  	<a href="adresse.html"><i class="material-icons">location_on</i></a>
         	  </label>
 				<!-- Right aligned menu below button -->
 				<button id="demo-menu-lower-right"
