--- a/index.html
+++ b/index.html
@@ -69,13 +69,18 @@
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
 				    <i class="material-icons blue_color">search</i>
-				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
+				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
 			  </div>
 			</div>	
 	    </div>		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content mdl-container">	
+
+	    <div class="page-content mdl-container">
+
+			<div id="search_bar_results" class="container search_bar_results">
+
+			</div>	
 			<div class="mdl-grid container">
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comprendre">
@@ -182,7 +187,11 @@
 
 	</div>
 		
+<!-- inclusion  des fichiers javascript -->
+<script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
 
+<script type="text/javascript" src="js/json_query.min.js"></script>
+<script type="text/javascript" src="data/places_db.json"></script>
 <script type="text/javascript" src="js/adresses_search.js"></script>
 </body>
 </html>
