refractor: centre la bar de recherche

--- a/quiz_play.html
+++ b/quiz_play.html
@@ -67,7 +67,7 @@
 	    </nav>
 	  </div> 
 	    <div class="page-content">	
-			<div class="mdl-grid bg_search">
+			<div class="mdl-grid bg_search mdl-container">
 			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
 				<div class="search">
 				    <i class="material-icons blue_color">search</i>
