--- a/quiz_start.html
+++ b/quiz_start.html
@@ -40,7 +40,7 @@
 	      <!-- Navigation. We hide it in small screens. -->
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="adresse.html">Rechercher une pharmacie/CSi</a>
-	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>	        
+	        <!--<a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>-->		        
 	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
 	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
 	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
