fix: serach_bar result design, the scrollbar overflow

--- a/index.html
+++ b/index.html
@@ -77,12 +77,17 @@
 	    </div>		  
 	  <main class="mdl-layout__content">
 
-	    <div class="page-content mdl-container">
+	    <div class="page-content mdl-container search_bar_results_parent">
 
-			<div id="search_bar_results" class="container search_bar_results">
+	    	<!-- START search results-->				 
+			<div id="search_bar_results" class="search_bar_results ">
 
 			</div>	
+			<!-- END search results-->
+
 			<div class="mdl-grid container">
+
+			
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comprendre">
 					  <div class="mdl-card__title mdl-card--expand"></div>
