form textfield implemented

--- a/ajout_pharma.html
+++ b/ajout_pharma.html
@@ -79,24 +79,26 @@
 				<h4 class="container_title">Ajouter une pharmacie</h4>
 					<div class="text_container">
 					<div class="mdl-container_text">	
-					<span>Nom, adresse, ville... </span><br>
-                    <input class="search_page full_width" id="input_name" type="text" placeholder="Indiquez ici un nom, une adresse, une ville..."><br><br>					
-                    <button id="btn_search" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored full_width">Rechercher</button><br><br>
-                    <button id="btn_search_near" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored full_width">La plus proche de ma position</button>
+                    <span>Nom de la pharmacie </span><br>	
+                    <input class="search_page full_width" id="input_name" type="text" placeholder="Indiquez ici le nom de la pharmacie"><br><br>	       
 
-						<br><br>
+                    <span>Adresse de la pharmacie </span><br>             			
+                    <input class="search_page full_width" id="input_name" type="text" placeholder="Indiquez ici l'adresse de la pharmacie"><br><br>	
 
-	                 <div class="panel panel-default">
-	                        <div class="panel-heading"> 
-	                            <span class="text-primary"><b>Résultats de la recherche</b></span>
-	                        </div>
+                    <span>Ville </span><br>
+                    <input class="search_page full_width" id="input_name" type="text" placeholder="Ville"><br><br>	
 
-	                        <div class="panel-body">
-	                            <div id="results" class="row"></div>
-	                        </div>
-	                </div>       
+                    <span>Contact pharmacie</span><br>
+                    <input class="search_page full_width" id="input_name" type="text" placeholder="Contact pharmacie"><br><br>	
 
+                    <span>Quartier ou Arrondissement </span><br>
+                    <input class="search_page full_width" id="input_name" type="text" placeholder="Indiquez ici le quartier ou l'arrondissement"><br><br>	  
 
+					<span>Numéro ou e-mail de l'envoyeur </span><br>
+                    <input class="search_page full_width" id="input_name" type="text" placeholder="Numéro ou e-mail de l'envoyeur"><br><br>	
+
+                    <button id="btn_search" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored full_width">Ajouter</button><br><br>
+                        
 
 						</div>
 					</div>
