menu link updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	      <nav class="mdl-navigation mdl-layout--large-screen-only">
 	        <a class="mdl-navigation__link" href="adresse.html">Rechercher une pharmacie/CSi</a>
 	        <a class="mdl-navigation__link" href="adresse_near.html">La plus proche de moi</a>	        
-	        <a class="mdl-navigation__link" href="">Ajouter un centre de santé</a>
+	        <a class="mdl-navigation__link" href="ajout_pharma.html">Ajouter un centre de santé</a>
 	        <a class="mdl-navigation__link" href="comment.html">Comment ?</a>
 	        <a class="mdl-navigation__link" href="qui.html">A propos</a>
 	      </nav>
