menu item added

--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
 					  </div>
 					</div>		  	
 			  </div>
+			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp chasse">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename"><a href="palu_vous_start.html">Le paludisme et vous</a></span>
+					  </div>
+					</div>		  	
+			  </div>			  
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet mdl-cell--hide-phone mdl-cell--hide-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comment">
 					  <div class="mdl-card__title mdl-card--expand"></div>
