--- a/chasse_para_play.html
+++ b/chasse_para_play.html
@@ -109,10 +109,9 @@
 						            <button id="next" class="btn btn-primary">Suivant</button>
 						        </div>
 
-						        <div>
-						            <a href="index.html"><button id="quitter" class="btn btn-primary">Quitter</button></a>
-						        </div>
-
+		<form action="index.html">
+        	<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">quitter</button>
+		</form>	
 						    </div>	
 						</div>
 					</div>
