--- a/chasse_para_play.html
+++ b/chasse_para_play.html
@@ -106,12 +106,13 @@
 						            <div id="score">
 						                Score : <span id="score_value">0</span>
 						            </div>
-						            <button id="next" class="btn btn-primary">Suivant</button>
+						            <button id="next" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">Suivant</button>
+						        </div>
+								<br>
+						        <div>
+						            <a href="index.html"><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">quitter</button></a>
 						        </div>
 
-		<form action="index.html">
-        	<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">quitter</button>
-		</form>	
 						    </div>	
 						</div>
 					</div>
