classes ID addedé

--- a/chasse_para_play.html
+++ b/chasse_para_play.html
@@ -102,6 +102,7 @@
 						        <div id="canvas_belt"> 
 						                <canvas id="my_canvas"></canvas>
 						        </div>
+						        <br>
 						        <div id="score_next">
 						            <div id="score">
 						                Score : <span id="score_value">0</span>
@@ -110,7 +111,7 @@
 						        </div>
 								<br>
 						        <div>
-						            <a href="index.html"><button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">quitter</button></a>
+						            <a href="index.html"><button id="quitter" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">quitter</button></a>
 						        </div>
 
 						    </div>	
