--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp chasse">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename">Jouer : Chasse aux parasites</span>
+					    <span class="demo-card-image__filename"><a href="chasse_para_start.html">Jouer : Chasse aux parasites</a></span>
 					  </div>
 					</div>		  	
 			  </div>
