refactor: add search options

--- a/index.html
+++ b/index.html
@@ -72,6 +72,26 @@
 				    <i class="material-icons blue_color">search</i>
 				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
+
+
+
+				<table>
+            <tr><td style="background-color: #fff;  border-radius: 3px;"> 
+         <label class="mdl-radio mdl-js-radio" for="option1">
+            <input type="radio" id="option1" name="gender" value="true" class="mdl-radio__button" checked>
+            <span class="mdl-radio__label">Pharmacie</span>
+         </label>
+	  </td>
+      <td style="background-color: #fff; border-radius: 3px;">
+         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option2">
+            <input type="radio" id="option2" name="gender" value="false"  class="mdl-radio__button" >
+            <span class="mdl-radio__label">Hopital</span>
+         </label>
+	  </td> 
+      </tr>
+   </table>   
+
+
 			  </div>
 			</div>	
 	    </div>		  
