Revert "link updated""
This reverts commit a217668c9da3da7f88c96ee00a8b192996c3e460.

--- a/qui.html
+++ b/qui.html
@@ -57,7 +57,7 @@
 	      <a class="mdl-navigation__link" href="adresse.html"><i class="material-icons">search</i>Rechecher </a>	    	      	      
 	      <a class="mdl-navigation__link" href="question_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
 	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
-	      <a class="mdl-navigation__link" href="chasse_para_start.html"><i class="material-icons">extension</i>Chasse aux parasites</a>	 	      			     
+	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
 	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
 	      <a class="mdl-navigation__link" href="qui.html"><i class="material-icons">info</i> A propos</a>
 	    </nav>
