--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
 	      <a class="mdl-navigation__link" href="se_soigner.html"><i class="material-icons">healing</i>Se soigner</a>
 	      <a class="mdl-navigation__link" href="adresse.html"><i class="material-icons">search</i>Rechecher </a>
-	      <a class="mdl-navigation__link" href="questions_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="question_reponse.html"><i class="material-icons">forum</i>Questions / Réponses</a>
 	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
 	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
@@ -121,7 +121,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp questions">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename"><a href="questions_reponses.html">Questions / Réponses</a></span>
+					    <span class="demo-card-image__filename"><a href="question_reponse.html">Questions / Réponses</a></span>
 					  </div>
 					</div>		  	
 			  </div>
