--- a/quiz_play.html
+++ b/quiz_play.html
@@ -59,7 +59,7 @@
 	      <a class="mdl-navigation__link" href="diagnostiquer.html"><i class="material-icons">find_in_page</i>Diagnostiquer</a>	      
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">healing</i>Se soigner</a>
 	      <a class="mdl-navigation__link" href="adresse.html"><i class="material-icons">search</i>Rechecher </a>	    	      
-	      <a class="mdl-navigation__link" href="questions_reponses.html"><i class="material-icons">forum</i>Questions / Réponses</a>
+	      <a class="mdl-navigation__link" href="question_reponse.html"><i class="material-icons">forum</i>Questions / Réponses</a>
 	      <a class="mdl-navigation__link" href="quiz_play.html"><i class="material-icons">games</i>Le quiz</a>
 	      <a class="mdl-navigation__link" href=""><i class="material-icons">extension</i>Chasse aux parasites</a>	      			     
 	      <a class="mdl-navigation__link" href="comment.html"><i class="material-icons">copyright</i>Comment ?</a>
