feat: search too

--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@
 
 				<table>
             <tr><td style="background-color: #fff;  border-radius: 3px;"> 
-         <label class="mdl-radio mdl-js-radio" for="option1">
-            <input type="radio" id="option1" name="gender" value="true" class="mdl-radio__button" checked>
+         <label class="mdl-radio mdl-js-radio" for="option_pharma">
+            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
             <span class="mdl-radio__label">Pharmacie</span>
          </label>
 	  </td>
       <td style="background-color: #fff; border-radius: 3px;">
-         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option2">
-            <input type="radio" id="option2" name="gender" value="false"  class="mdl-radio__button" >
+         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option_hospital">
+            <input type="radio" id="option_hospital" name="search_option" class="mdl-radio__button" >
             <span class="mdl-radio__label">Hopital</span>
          </label>
 	  </td> 
@@ -218,6 +218,7 @@
 
 <script type="text/javascript" src="js/json_query.min.js"></script>
 <script type="text/javascript" src="data/places_db.json"></script>
+<script type="text/javascript" src="data/places_hospital_db.json"></script>
 <script type="text/javascript" src="js/adresses_search.js"></script>
 </body>
 </html>
