--- a/index.html
+++ b/index.html
@@ -76,16 +76,22 @@
 
 
 				<table>
-            <tr><td style="background-color: #fff;  border-radius: 3px;"> 
+            <tr><td class="search_radio"> 
          <label class="mdl-radio mdl-js-radio" for="option_pharma">
             <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
             <span class="mdl-radio__label">Pharmacie</span>
          </label>
 	  </td>
-      <td style="background-color: #fff; border-radius: 3px;">
-         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="option_hospital">
+      <td class="search_radio">
+         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect " for="option_hospital">
             <input type="radio" id="option_hospital" name="search_option" class="mdl-radio__button" >
             <span class="mdl-radio__label">Hopital</span>
+         </label>
+	  </td> 
+      <td class="search_radio" style="">
+         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect search_radio" for="option_labo">
+            <input type="radio" id="option_labo" name="search_option" class="mdl-radio__button" >
+            <span class="mdl-radio__label">Laboratoire</span>
          </label>
 	  </td> 
       </tr>
