--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<link rel="stylesheet" href="css/cmaterial-design-iconic-font.css" /> 
 	<link rel="stylesheet" href="css/adresses.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 </head>
 <body>
