offline file linked

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>EduPalu .:. Bienvenue</title>
 	<link rel="icon" href="favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-light_blue.min.css" /> 
+	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
 	<link rel="stylesheet" href="css/cmaterial-design-iconic-font.css" /> 
 	<link rel="stylesheet" href="css/adresses.css" />
