table center class added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 
 
-				<table>
+				<table class="table_center">
             <tr><td class="search_radio"> 
          <label class="mdl-radio mdl-js-radio" for="option_pharma">
             <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
