--- a/comprendre.html
+++ b/comprendre.html
@@ -9,7 +9,9 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="css/material.blue-light_blue.min.css" /> 
 	<link rel="stylesheet" href="css/custom.css" /> 
-	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+	<link rel="stylesheet" href="css/adresses.css" />
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>	
 </head>
 <body>
 
@@ -96,16 +98,7 @@
 			  </div>
 			</div>	
 	    </div>	 
-	    <div class="page-content">	
-			<div class="mdl-grid bg_search">
-			  <div class="mdl-cell mdl-cell--12-col mdl-cell--4-col-phone mdl-cell--8-col-tablet">
-				<div class="search">
-				    <i class="material-icons blue_color">search</i>
-				    <input type="text" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
-				</div>
-			  </div>
-			</div>	
-	    </div>		  
+		  
 	  <main class="mdl-layout__content">
 	    <div class="page-content">	
 			
