fix: pharmacy search in adresse.html

--- a/adresse.html
+++ b/adresse.html
@@ -125,6 +125,7 @@
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/json_query.min.js"></script>
 <script type="text/javascript" src="data/places_db.json"></script>
+<script type="text/javascript" src="data/places_hospital_db.json"></script>
 <script type="text/javascript" src="js/adresses_search.js"></script>		
 
 </body>
