--- a/adresse_near.html
+++ b/adresse_near.html
@@ -69,29 +69,21 @@
 				    <i class="material-icons blue_color">search</i>
 				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
-
-					<table class="table_center">
-				            <tr><td class="search_radio"> 
-				         <label class="mdl-radio mdl-js-radio" for="option_pharma">
-				            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
-				            <span class="mdl-radio__label">Pharmacie</span>
-				         </label>
-					  </td>
-				      <td class="search_radio">
-				         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect " for="option_hospital">
-				            <input type="radio" id="option_hospital" name="search_option" class="mdl-radio__button" >
-				            <span class="mdl-radio__label">Hopital</span>
-				         </label>
-					  </td> 
-				      <td class="search_radio" style="">
-				         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect search_radio" for="option_labo">
-				            <input type="radio" id="option_labo" name="search_option" class="mdl-radio__button" >
-				            <span class="mdl-radio__label">Laboratoire</span>
-				         </label>
-					  </td> 
-				      </tr>
-				   </table>   
-
+		<table id="search_options_container" class="table_center">
+	        <tr><td class="search_radio"> 
+			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
+			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
+			            <span class="mdl-radio__label">Pharmacie</span>
+			         </label>
+			    </td>
+		      <td class="search_radio">
+		         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect " for="option_hospital">
+		            <input type="radio" id="option_hospital" name="search_option" class="mdl-radio__button" >
+		            <span class="mdl-radio__label">Hopital</span>
+		         </label>
+			  </td> 
+	      </tr>
+	   </table>   
 
 			  </div>
 			</div>	
@@ -143,11 +135,10 @@
 		
 <!-- inclusion  des fichiers javascript -->
 <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-<!-- Bootstrap JavaScript File Include -->
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+
 <script type="text/javascript" src="js/json_query.min.js"></script>
 <script type="text/javascript" src="data/places_db.json"></script>
-<script type="text/javascript" src="js/adresses_search.js"></script>		
-
+<script type="text/javascript" src="data/places_hospital_db.json"></script>
+<script type="text/javascript" src="js/adresses_search.js"></script>
 </body>
 </html>
