--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp pharmacie">
 					  <div class="mdl-card__title mdl-card--expand"></div>
 					  <div class="mdl-card__actions">
-					    <span class="demo-card-image__filename"><a href="adresse.html">Pharmacies</a></span>
+					    <span class="demo-card-image__filename"><a href="adresse.html">Recherche</a></span>
 					  </div>
 					</div>	
 			  </div>
