--- a/adresse_near.html
+++ b/adresse_near.html
@@ -69,7 +69,7 @@
 				    <i class="material-icons blue_color">search</i>
 				    <input type="text" id="input_search" name="input_search" placeholder="Rechercher une pharmacie, un CSI, un hôpital...">
 				</div>
-		<table id="search_options_container" class="table_center">
+		<table id="search_options_container" class="table_center" style="display: none">
 	        <tr><td class="search_radio"> 
 			         <label class="mdl-radio mdl-js-radio" for="option_pharma">
 			            <input type="radio" id="option_pharma" name="search_option" class="mdl-radio__button" checked>
