bug: resolve and show searchView into main view

--- a/index.html
+++ b/index.html
@@ -93,17 +93,16 @@
 	    </div>		  
 	  <main class="mdl-layout__content">
 
-	    <div class="page-content mdl-container search_bar_results_parent">
+	    <div class="page-content mdl-container"> 
 
 	    	<!-- START search results-->				 
-			<div id="search_bar_results" class="search_bar_results ">
+			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results">
 
 			</div>	
 			<!-- END search results-->
 
-			<div class="mdl-grid container">
+			<div id="_main" class="mdl-grid container">
 
-			
 			  <div class="mdl-cell mdl-cell--4-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
 			  		<div class="demo-card-image mdl-card mdl-shadow--2dp comprendre">
 					  <div class="mdl-card__title mdl-card--expand"></div>
@@ -191,9 +190,10 @@
 					    <span class="demo-card-image__filename"><a href="qui.html">Qui ?</a></span>
 					  </div>
 					</div>		  	
-			  </div>				    
+			  </div>		
 			</div>
-	    </div>
+	    
+		</div>
 
 	    <div class="page-content mdl-container">	
 			<div class="mdl-grid container">	
@@ -205,7 +205,7 @@
 				  </div>
 				</footer>	
 			</div>
-	    </div>
+	    </div>  
 
 
 
