style: add to search view action into html files

--- a/adresse.html
+++ b/adresse.html
@@ -91,9 +91,15 @@
 	    </div>	 
 		  
 	  <main class="mdl-layout__content">
-	    <div class="page-content">	
+	    <div class="page-content mdl-container">	
 			
-			<div class="mdl-grid mdl-container">
+			<!-- START search results-->				 
+			<div id="search_bar_results" class="mdl-layout--large-screen-only mdl-container search_bar_results" style="display: none">
+
+			</div>	
+			<!-- END search results-->
+
+			<div id="_main" class="mdl-grid mdl-container">
 				<h4 class="container_title">Trouver une pharmacie</h4>
 					<div class="text_container">
 					<div class="mdl-container_text">	
