--- a/comment.html
+++ b/comment.html
@@ -189,7 +189,15 @@
 					    <span class="demo-card-image__filename">Jack Stimpson, Flickr, <br />Creative Commons BY.</span>
 					  </div>
 					</div>	
-			  </div>			  			  			  			  			  			  
+			  </div>	
+			  <div class="mdl-cell mdl-cell--3-col mdl-cell--2-col-phone mdl-cell--2-col-tablet">
+			  		<div class="demo-card-image mdl-card mdl-shadow--2dp diagnostic">
+					  <div class="mdl-card__title mdl-card--expand"></div>
+					  <div class="mdl-card__actions">
+					    <span class="demo-card-image__filename">Ph : Wendy Stone/IRIN</span>
+					  </div>
+					</div>	
+			  </div>				  		  			  			  			  			  			  
 			</div>
 
 
