--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
 	<link rel="stylesheet" href="css/adresses.css" />
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-102606727-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+	
 </head>
 <body>
 
